# OpenCV

./: README.md
Annotated Videos/: Export v2 project - AutomatedAttendance - 2_24_2024.ndjson  annotation.py  sdk.py  yolo.py
Attendance Project/Annotation for Video Frames/angry/: 21BCS111_1_1.txt  21BCS111_1_10.txt  21BCS111_1_11.txt  21BCS111_1_12.txt  21BCS111_1_13.txt  21BCS111_1_14.txt  21BCS111_1_15.txt  21BCS111_1_16.txt  21BCS111_1_17.txt  21BCS111_1_18.txt  21BCS111_1_19.txt  21BCS111_1_2.txt  21BCS111_1_20.txt  21BCS111_1_21.txt  21BCS111_1_22.txt  (+10 more)
Automated_Attendace/Annotation for Video Frames/: 21BCS111_1_1.txt  21BCS111_1_10.txt  21BCS111_1_11.txt  21BCS111_1_12.txt  21BCS111_1_13.txt  21BCS111_1_14.txt  21BCS111_1_15.txt  21BCS111_1_16.txt  21BCS111_1_17.txt  21BCS111_1_18.txt  21BCS111_1_19.txt  21BCS111_1_2.txt  21BCS111_1_20.txt  21BCS111_1_21.txt  21BCS111_1_22.txt  21BCS111_1_23.txt  21BCS111_1_24.txt  21BCS111_1_25.txt  21BCS111_1_3.txt  21BCS111_1_4.txt  21BCS111_1_5.txt  21BCS111_1_6.txt  21BCS111_1_7.txt  21BCS111_1_8.txt  21BCS111_1_9.txt  21BCS111_2_1.txt  21BCS111_2_10.txt  21BCS111_2_11.txt  21BCS111_2_12.txt  21BCS111_2_13.txt  21BCS111_2_14.txt  21BCS111_2_15.txt  21BCS111_2_16.txt  21BCS111_2_17.txt  21BCS111_2_18.txt  21BCS111_2_19.txt  21BCS111_2_2.txt  21BCS111_2_20.txt  21BCS111_2_21.txt  21BCS111_2_22.txt  (+110 more)
L10: Bi-lateral filtering/: BilateralFiltering  CMakeCache.txt  CMakeLists.txt  Makefile  bilateral_filtering.cpp  cmake_install.cmake
L11: Mathematical Morphology/: CMakeCache.txt  CMakeLists.txt  DilationErosion  Makefile  cmake_install.cmake  dilation_erosion.cpp
L12: Region selection followed by boundary detection and Thinning using Mathematical Morphology/: CMakeCache.txt  CMakeLists.txt  Makefile  RegionSegmentation  cmake_install.cmake  region_segmentation.cpp
L13: Find zero crossings in LoG/: CMakeCache.txt  CMakeLists.txt  LOG  Makefile  cmake_install.cmake  edge_detection_LOG.cpp
L14: Edge Linking/: CMakeCache.txt  CMakeLists.txt  EL  Makefile  cmake_install.cmake  edge_linking.cpp  edge_linking.webm
L2: Learning OpenCV functions/: CMakeCache.txt  CMakeLists.txt  DisplayImage  Makefile  cmake_install.cmake  read_write_image.cpp
L6: Find all the connected components in the image/: 21BCS111.cpp
L7: Improvise your method for finding all the connected components in an image/: CMakeCache.txt  CMakeLists.txt  ConnectedComponents  Makefile  cmake_install.cmake  connected_components.cpp
L8: Histogram Equalization/: CMakeCache.txt  CMakeLists.txt  HistogramEqualization  Makefile  cmake_install.cmake  histogram_equalization_color_image.cpp  histogram_equalization_greyscale_image.cpp
L9: Histogram Matching/: CMakeCache.txt  CMakeLists.txt  HistogramMatching  Makefile  cmake_install.cmake  histogram_matching.cpp  histogram_matching_pixels.cpp
Rectify L12: Region selection followed by boundary detection and Thinning using Mathematical Morphology/: CMakeCache.txt  CMakeLists.txt  Makefile  RegionSeg  cmake_install.cmake  region_seg.cpp
(+124 files in other folders)
